force-app/main/default/objects/Opportunity/fields/Aashiyana_magento_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Aashiyana_magento_Order_Number__c</fullName>
    <label>Aashiyana magento Order Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>