force-app/main/default/objects/Opportunity/fields/Aashiyana_Model__c.field-meta.xml
<CustomField>
    <fullName>Aashiyana_Model__c</fullName>
    <label>Aashiyana Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>