force-app/main/default/objects/Opportunity/fields/Aashiyana_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Aashiyana_Order_Date__c</fullName>
    <label>Aashiyana Order Date</label>
    <type>Date</type>
</CustomField>