force-app/main/default/objects/Opportunity/fields/Aashiyana_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>Aashiyana_Order_ID__c</fullName>
    <label>Aashiyana Order ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>