force-app/main/default/objects/Opportunity/fields/Aashiyana_OrderType__c.field-meta.xml
<CustomField>
    <fullName>Aashiyana_OrderType__c</fullName>
    <label>Aashiyana OrderType</label>
    <length>100</length>
    <type>Text</type>
</CustomField>