force-app/main/default/objects/Opportunity/fields/Aashiyana_Orientation__c.field-meta.xml
<CustomField>
    <fullName>Aashiyana_Orientation__c</fullName>
    <label>Aashiyana Orientation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>