force-app/main/default/objects/Opportunity/fields/Aashiyana_Payment_ID__c.field-meta.xml
<CustomField>
    <fullName>Aashiyana_Payment_ID__c</fullName>
    <label>Aashiyana Payment ID</label>
    <length>31</length>
    <type>Text</type>
</CustomField>