force-app/main/default/objects/Opportunity/fields/Aashiyana_Payment_Value__c.field-meta.xml
<CustomField>
    <fullName>Aashiyana_Payment_Value__c</fullName>
    <label>Aashiyana Payment Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>