force-app/main/default/objects/Opportunity/fields/Additional_Amount_Encrypted_Link__c.field-meta.xml
<CustomField>
    <fullName>Additional_Amount_Encrypted_Link__c</fullName>
    <label>Additional Amount Encrypted Link</label>
    <length>100</length>
    <type>Text</type>
</CustomField>