force-app/main/default/objects/Opportunity/fields/Allocation_Complete__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allocation Complete</label>
    <type>Checkbox</type>
</CustomField>