force-app/main/default/objects/Opportunity/fields/AMC_Amount__c.field-meta.xml
<CustomField>
    <fullName>AMC_Amount__c</fullName>
    <label>AMC Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>