force-app/main/default/objects/Opportunity/fields/AMC_Base_Amount__c.field-meta.xml
<CustomField>
    <fullName>AMC_Base_Amount__c</fullName>
    <formula>( (100 / 118) * AMC_Amount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AMC Base Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>