force-app/main/default/objects/Opportunity/fields/AMC_Name__c.field-meta.xml
<CustomField>
    <fullName>AMC_Name__c</fullName>
    <label>AMC Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>