force-app/main/default/objects/Opportunity/fields/AMC_Number__c.field-meta.xml
<CustomField>
    <fullName>AMC_Number__c</fullName>
    <label>AMC Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>