force-app/main/default/objects/Opportunity/fields/AMC_Per_Day_Amount__c.field-meta.xml
<CustomField>
    <fullName>AMC_Per_Day_Amount__c</fullName>
    <label>AMC Per Day Amount</label>
    <summarizedField>OpportunityLineItem.AMC_Per_Day_Amount__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>