force-app/main/default/objects/Opportunity/fields/AMC_Products__c.field-meta.xml
<CustomField>
    <fullName>AMC_Products__c</fullName>
    <label>AMC Products</label>
    <length>100</length>
    <type>Text</type>
</CustomField>