force-app/main/default/objects/Opportunity/fields/AMC_Quantity__c.field-meta.xml
<CustomField>
    <fullName>AMC_Quantity__c</fullName>
    <label>AMC Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>