force-app/main/default/objects/Opportunity/fields/B2B_Actual_CPDD__c.field-meta.xml
<CustomField>
    <fullName>B2B_Actual_CPDD__c</fullName>
    <label>B2B Actual CPDD</label>
    <type>Date</type>
</CustomField>