force-app/main/default/objects/Opportunity/fields/B2B_Actual_CPDW__c.field-meta.xml
<CustomField>
    <fullName>B2B_Actual_CPDW__c</fullName>
    <description>This field is used to calculate the CPDW</description>
    <formula>IF(
ISBLANK(B2B_Actual_CPDD__c),
TEXT(B2B_Actual_CPDD__c),
TEXT(B2B_Actual_CPDD__c) &amp; &apos; to &apos; &amp; TEXT(B2B_Actual_CPDD__c + 6)
)</formula>
    <label>B2B CPDW</label>
    <type>Text</type>
</CustomField>