force-app/main/default/objects/Opportunity/fields/B2B_BM_SO_Release_Date__c.field-meta.xml
<CustomField>
    <fullName>B2B_BM_SO_Release_Date__c</fullName>
    <label>B2B BM SO Release Date</label>
    <type>Date</type>
</CustomField>