force-app/main/default/objects/Opportunity/fields/B2B_CPDD_Days__c.field-meta.xml
<CustomField>
    <fullName>B2B_CPDD_Days__c</fullName>
    <formula>IF(
DATEVALUE(CreatedDate) &gt;= DATE(2025, 8, 07),
CASE(Vendor_Name__c,
&quot;AGP - A0W4&quot;, 60,					
&quot;HAL - H0G2&quot;, 45,					
&quot;Geze-G0B2&quot;, 50,
&quot;Dorset-D786&quot;, 50,
&quot;FGPLTD-F0A1&quot;, 50,
&quot;IFSL - I0H7&quot;, 55,
&quot;KORI - K0H1&quot;, 55,
&quot;KICH-K3A7&quot;, 50,
&quot;Ahlada - A611&quot;, 50,
&quot;GMP - G325&quot;, 50,
&quot;TSPL - T486&quot;, 50,
&quot;SEPL - SK79&quot;, 50,
&quot;NCL - N3B3&quot;, 50,
&quot;Bhawani - BN39&quot;, 50,
&quot;Iclean - I333&quot;, 50,
&quot;SagarAsia - SMLO&quot;, 0,
&quot;NCL-N3B3-OR&quot;, 50,
&quot;G325-MAH&quot;, 50,
&quot;KRUTI - K3E0&quot;, 35,
&quot;ULT - U0A3&quot;, 45,
&quot;Iclean - I333TG&quot;, 50,
&quot;Component-C0D9&quot;, 50,
&quot;PFCPLTD - P0J6&quot;, 70,
&quot;GWS - G0G7&quot;, 55,
0
),
IF(
DATEVALUE(CreatedDate) &gt;= DATE(2025, 7, 9),
CASE(Vendor_Name__c,
&quot;Geze-G0B2&quot;, 50,
&quot;Dorset-D786&quot;, 50,
&quot;KORI - K0H1&quot;, 55,
&quot;IFSL - I0H7&quot;, 55,
&quot;KICH-K3A7&quot;, 50,
&quot;Ahlada - A611&quot;, 50,
&quot;GMP - G325&quot;, 50,
&quot;TSPL - T486&quot;, 50,
&quot;SEPL - SK79&quot;, 50,
&quot;NCL - N3B3&quot;, 50,
&quot;Bhawani - BN39&quot;, 50,
&quot;Iclean - I333&quot;, 50,
&quot;SagarAsia - SMLO&quot;, 0,
&quot;NCL-N3B3-OR&quot;, 50,
&quot;G325-MAH&quot;, 50,
&quot;KRUTI - K3E0&quot;, 35,
&quot;ULT - U0A3&quot;, 45,
&quot;Iclean - I333TG&quot;, 50,
&quot;Component-C0D9&quot;, 50,
&quot;PFCPLTD - P0J6&quot;, 55,
&quot;GWS - G0G7&quot;, 55,
0
),

IF(
DATEVALUE(CreatedDate) &gt;= DATE(2025, 2, 14),
CASE(Vendor_Name__c,
&quot;Geze-G0B2&quot;, 50,
&quot;Dorset-D786&quot;, 50,
CASE(Vendor_Name__c,
&quot;Ahlada - A611&quot;, 50,
&quot;GMP - G325&quot;, 50,
&quot;TSPL - T486&quot;, 50,
&quot;SEPL - SK79&quot;, 50,
&quot;NCL - N3B3&quot;, 50,
&quot;Bhawani - BN39&quot;, 50,
&quot;Iclean - I333&quot;, 50,
&quot;SagarAsia - SMLO&quot;, 0,
&quot;NCL-N3B3-OR&quot;, 50,
&quot;G325-MAH&quot;, 50,
&quot;KRUTI - K3E0&quot;, 35,
&quot;ULT - U0A3&quot;, 45,
&quot;Iclean - I333TG&quot;, 50,
&quot;Component-C0D9&quot;, 50,
&quot;PFCPLTD - P0J6&quot;, 55,
&quot;GWS - G0G7&quot;, 55,
0
)
),
CASE(Vendor_Name__c,
&quot;Ahlada - A611&quot;, 50,
&quot;GMP - G325&quot;, 50,
&quot;TSPL - T486&quot;, 50,
&quot;SEPL - SK79&quot;, 50,
&quot;NCL - N3B3&quot;, 50,
&quot;Bhawani - BN39&quot;, 50,
&quot;Iclean - I333&quot;, 50,
&quot;SagarAsia - SMLO&quot;, 0,
&quot;NCL-N3B3-OR&quot;, 50,
&quot;G325-MAH&quot;, 50,
&quot;KRUTI - K3E0&quot;, 35,
&quot;ULT - U0A3&quot;, 45,
&quot;Iclean - I333TG&quot;, 50,
&quot;Component-C0D9&quot;, 50,
&quot;PFCPLTD - P0J6&quot;, 55,
&quot;GWS - G0G7&quot;, 55,
0
)
)
)
)</formula>
    <label>B2B CPDD Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>