force-app/main/default/objects/Opportunity/fields/B2B_CPDD_Final__c.field-meta.xml
<CustomField>
    <fullName>B2B_CPDD_Final__c</fullName>
    <formula>Date_Of_PO_Placed__c  +  B2B_CPDD_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>B2B CPDD (Final)</label>
    <type>Date</type>
</CustomField>