force-app/main/default/objects/Opportunity/fields/B2B_Door_Line_Item_Number_for_Hardwa_del__c.field-meta.xml
<CustomField>
    <fullName>B2B_Door_Line_Item_Number_for_Hardwa_del__c</fullName>
    <label>B2B_Door_Line Item Number for Hardware</label>
    <length>255</length>
    <type>Text</type>
</CustomField>