force-app/main/default/objects/Opportunity/fields/B2B_Drawing_Added_Date__c.field-meta.xml
<CustomField>
    <fullName>B2B_Drawing_Added_Date__c</fullName>
    <label>B2B Drawing Added Date</label>
    <type>Date</type>
</CustomField>