force-app/main/default/objects/Opportunity/fields/B2B_Is_Check_CSS_Approval__c.field-meta.xml
<CustomField>
    <fullName>B2B_Is_Check_CSS_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>B2B Is Check CSS Approval</label>
    <type>Checkbox</type>
</CustomField>