force-app/main/default/objects/Opportunity/fields/B2B_Is_Check_H_and_C_Approval__c.field-meta.xml
<CustomField>
    <fullName>B2B_Is_Check_H_and_C_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>B2B Is Check H and C Approval</label>
    <type>Checkbox</type>
</CustomField>