force-app/main/default/objects/Opportunity/fields/B2B_Is_Check_H_and_C_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>B2B_Is_Check_H_and_C_Approval_Date__c</fullName>
    <label>B2B Is Check H and C Approval Date</label>
    <type>DateTime</type>
</CustomField>