force-app/main/default/objects/Opportunity/fields/B2B_IsCheck_BackToOpen_Opp__c.field-meta.xml
<CustomField>
    <fullName>B2B_IsCheck_BackToOpen_Opp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>B2B IsCheck BackToOpen Opp</label>
    <type>Checkbox</type>
</CustomField>