force-app/main/default/objects/Opportunity/fields/B2B_Opp_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>B2B_Opp_Creation_Date__c</fullName>
    <formula>DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>B2B Opp Creation Date</label>
    <type>Date</type>
</CustomField>