force-app/main/default/objects/Opportunity/fields/B2B_PCR__c.field-meta.xml
<CustomField>
    <fullName>B2B_PCR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>B2B PCR</label>
    <referenceTo>PCR__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>