force-app/main/default/objects/Opportunity/fields/B2B_Required_Date_of_Manufacturing_RDM__c.field-meta.xml
<CustomField>
    <fullName>B2B_Required_Date_of_Manufacturing_RDM__c</fullName>
    <formula>B2B_CPDD_Final__c  - 19</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>B2B Required Date of Manufacturing (RDM)</label>
    <type>Date</type>
</CustomField>