force-app/main/default/objects/Opportunity/fields/B2B_Required_Dispatch_Date_RDD__c.field-meta.xml
<CustomField>
    <fullName>B2B_Required_Dispatch_Date_RDD__c</fullName>
    <formula>B2B_CPDD_Final__c - 13</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>B2B Required Dispatch Date (RDD)</label>
    <type>Date</type>
</CustomField>