force-app/main/default/objects/Opportunity/fields/B2B_SM_Booking_Rejection_Date__c.field-meta.xml
<CustomField>
    <fullName>B2B_SM_Booking_Rejection_Date__c</fullName>
    <label>B2B SM Booking Rejection Date</label>
    <type>Date</type>
</CustomField>