force-app/main/default/objects/Opportunity/fields/B2B_SO_Creation_Date_Plus_60__c.field-meta.xml
<CustomField>
    <fullName>B2B_SO_Creation_Date_Plus_60__c</fullName>
    <formula>B2B_SO_Creation_Date__c	+ 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>B2B SO Creation Date Plus 60</label>
    <type>Date</type>
</CustomField>