force-app/main/default/objects/Opportunity/fields/B2B_SO_Error_Date__c.field-meta.xml
<CustomField>
    <fullName>B2B_SO_Error_Date__c</fullName>
    <label>B2B SO Error Date</label>
    <type>Date</type>
</CustomField>