force-app/main/default/objects/Opportunity/fields/B2B_SO_Release_date_by_SM__c.field-meta.xml
<CustomField>
    <fullName>B2B_SO_Release_date_by_SM__c</fullName>
    <label>B2B SO Release date by SM</label>
    <type>Date</type>
</CustomField>