force-app/main/default/objects/Opportunity/fields/B2B_SO_Release_Flag__c.field-meta.xml
<CustomField>
    <fullName>B2B_SO_Release_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>B2B SO Release Flag</label>
    <type>Checkbox</type>
</CustomField>