force-app/main/default/objects/Opportunity/fields/B2B_Total_Order_Margin__c.field-meta.xml
<CustomField>
    <fullName>B2B_Total_Order_Margin__c</fullName>
    <formula>Margin_Cost_Per_Unit__c  *  OLI_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>B2B Total Order Margin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>