force-app/main/default/objects/Opportunity/fields/B2C_Actual_CPDW__c.field-meta.xml
<CustomField>
    <fullName>B2C_Actual_CPDW__c</fullName>
    <formula>IF(
ISBLANK(Customer_Promised_Delivery_Date_Final__c),
TEXT(Customer_Promised_Delivery_Date_Final__c),
TEXT(DAY(Customer_Promised_Delivery_Date_Final__c)) + &quot;/&quot; + TEXT(MONTH(Customer_Promised_Delivery_Date_Final__c)) + &quot;/&quot; + TEXT(YEAR(Customer_Promised_Delivery_Date_Final__c)) &amp; &apos; to &apos; &amp; TEXT(DAY(Customer_Promised_Delivery_Date_Final__c + 6)) + &quot;/&quot; + TEXT(MONTH(Customer_Promised_Delivery_Date_Final__c + 6)) + &quot;/&quot; + TEXT(YEAR(Customer_Promised_Delivery_Date_Final__c + 6))
)</formula>
    <label>B2C CPDW</label>
    <type>Text</type>
</CustomField>