force-app/main/default/objects/Opportunity/fields/B2C_Retail_Order__c.field-meta.xml
<CustomField>
    <fullName>B2C_Retail_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retail Order</label>
    <type>Checkbox</type>
</CustomField>