force-app/main/default/objects/Opportunity/fields/B2C_Retail_Order_Reasons__c.field-meta.xml
<CustomField>
    <fullName>B2C_Retail_Order_Reasons__c</fullName>
    <label>Retail Order Reasons</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Due to Size</fullName>
            </value>
            <value>
                <fullName>Due to Product</fullName>
            </value>
            <value>
                <fullName>Due to Price</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>