force-app/main/default/objects/Opportunity/fields/BM_Booking_Date__c.field-meta.xml
<CustomField>
    <fullName>BM_Booking_Date__c</fullName>
    <label>BM Booking Date</label>
    <type>Date</type>
</CustomField>