force-app/main/default/objects/Opportunity/fields/Booking_Amount_Encrypted_Link__c.field-meta.xml
<CustomField>
    <fullName>Booking_Amount_Encrypted_Link__c</fullName>
    <label>Booking Amount Encrypted Link</label>
    <length>100</length>
    <type>Text</type>
</CustomField>