force-app/main/default/objects/Opportunity/fields/Booking_Done_By__c.field-meta.xml
<CustomField>
    <fullName>Booking_Done_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking Done  By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities13</relationshipName>
    <type>Lookup</type>
</CustomField>