force-app/main/default/objects/Opportunity/fields/Booking_form_sign_off_date__c.field-meta.xml
<CustomField>
    <fullName>Booking_form_sign_off_date__c</fullName>
    <label>Booking form sign off date</label>
    <type>Date</type>
</CustomField>