force-app/main/default/objects/Opportunity/fields/Booking_ID_Against_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Booking_ID_Against_Cancellation__c</fullName>
    <label>Booking ID Against Cancellation</label>
    <length>8</length>
    <type>Text</type>
</CustomField>