force-app/main/default/objects/Opportunity/fields/Booking_to_PO_diff__c.field-meta.xml
<CustomField>
    <fullName>Booking_to_PO_diff__c</fullName>
    <formula>if(ISNULL(Place_PO_Date__c) ,TODAY()- Booking_Date__c ,0  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking to PO diff</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>