force-app/main/default/objects/Opportunity/fields/BU_ID__c.field-meta.xml
<CustomField>
    <fullName>BU_ID__c</fullName>
    <label>BU ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>