force-app/main/default/objects/Opportunity/fields/Cancellation_Reason_by_Sales_Planning__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason_by_Sales_Planning__c</fullName>
    <inlineHelpText>Cancellation reason to be put by Sales Planning team</inlineHelpText>
    <label>Cancellation Reason by Sales Planning</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>