force-app/main/default/objects/Opportunity/fields/Cancellation_Reason_by_Support_Team__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason_by_Support_Team__c</fullName>
    <description>This field is used to input Incident number and details of manual cancellation request. It should mention if the whole booking ID needs cancellation or just single line item</description>
    <inlineHelpText>Enter Ticket Number and Description.It should mention if the whole booking ID needs cancellation or just single line item</inlineHelpText>
    <label>Cancellation Reason by Support Team</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>