force-app/main/default/objects/Opportunity/fields/CDDP_days__c.field-meta.xml
<CustomField>
    <fullName>CDDP_days__c</fullName>
    <formula>CASE( Max_CDDP_MG1_segregation__c ,
1,60,
2,90,
3,75,
4,120,
6,55,
7,85,
NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CPDD days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>