force-app/main/default/objects/Opportunity/fields/Child_Opportunity_Booking_Id__c.field-meta.xml
<CustomField>
    <fullName>Child_Opportunity_Booking_Id__c</fullName>
    <label>Child Opportunity Booking Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>