force-app/main/default/objects/Opportunity/fields/Cloned_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Cloned_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cloned Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunities (Cloned Opportunity)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>