force-app/main/default/objects/Opportunity/fields/Comp_Inst_HO_Done_WO_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Comp_Inst_HO_Done_WO_Quantity__c</fullName>
    <label>Comp Inst- HO Done WO Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>