force-app/main/default/objects/Opportunity/fields/Company_Pin_Code__c.field-meta.xml
<CustomField>
    <fullName>Company_Pin_Code__c</fullName>
    <label>Company Pin Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>