force-app/main/default/objects/Opportunity/fields/Complaint_Number__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Number__c</fullName>
    <label>Complaint Number</label>
    <length>250</length>
    <type>Text</type>
</CustomField>