force-app/main/default/objects/Opportunity/fields/Contact_Email_id__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email_id__c</fullName>
    <label>Contact Email id</label>
    <type>Email</type>
</CustomField>