force-app/main/default/objects/Opportunity/fields/CPDD_Updation_Reason__c.field-meta.xml
<CustomField>
    <fullName>CPDD_Updation_Reason__c</fullName>
    <label>CPDD Updation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unforeseen Site Delay</fullName>
            </value>
            <value>
                <fullName>Early CPDD intentionally logged by SE</fullName>
            </value>
            <value>
                <fullName>Early CPDD intentionally communicated by Customer</fullName>
            </value>
            <value>
                <fullName>Wrong CPDD logged by mistake (Distributor team)</fullName>
            </value>
            <value>
                <fullName>Windows + Doors (in separate booking ID) not available together</fullName>
            </value>
            <value>
                <fullName>Payment not received from dealer</fullName>
            </value>
            <value>
                <fullName>Payment not received from customer</fullName>
            </value>
            <value>
                <fullName>Stock PO logged for dealers</fullName>
            </value>
            <value>
                <fullName>Lack of storage space at distributor</fullName>
            </value>
            <value>
                <fullName>Credit limit not available for distributor</fullName>
            </value>
            <value>
                <fullName>Dispatch delay by TSL</fullName>
            </value>
            <value>
                <fullName>Other reasons</fullName>
            </value>
            <value>
                <fullName>Order cancelled by Customer</fullName>
            </value>
            <value>
                <fullName>Updated by Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>