force-app/main/default/objects/Opportunity/fields/CPDD_Updation_Remark__c.field-meta.xml
<CustomField>
    <fullName>CPDD_Updation_Remark__c</fullName>
    <label>CPDD Updation Remark</label>
    <length>255</length>
    <type>Text</type>
</CustomField>