force-app/main/default/objects/Opportunity/fields/Customer_address__c.field-meta.xml
<CustomField>
    <fullName>Customer_address__c</fullName>
    <label>Customer address</label>
    <type>TextArea</type>
</CustomField>