force-app/main/default/objects/Opportunity/fields/Customer_Characteristics__c.field-meta.xml
<CustomField>
    <fullName>Customer_Characteristics__c</fullName>
    <formula>IF(VALUE(NPS_Score__c) &lt;= 6, &quot;Detractor&quot;, 
 IF(VALUE(NPS_Score__c) &lt;= 8, &quot;Passive&quot;, 
  IF(VALUE(NPS_Score__c) &lt;= 10 , &quot;Promotor&quot;,&quot;&quot; 
  )
 )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Characteristics</label>
    <type>Text</type>
</CustomField>