force-app/main/default/objects/Opportunity/fields/Customer_Consent__c.field-meta.xml
<CustomField>
    <fullName>Customer_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Consent</label>
    <type>Checkbox</type>
</CustomField>