force-app/main/default/objects/Opportunity/fields/Customer_Group_Others__c.field-meta.xml
<CustomField>
    <fullName>Customer_Group_Others__c</fullName>
    <label>Customer Group Others</label>
    <length>255</length>
    <type>Text</type>
</CustomField>