force-app/main/default/objects/Opportunity/fields/Customer_Promised_Delivery_Date_Final__c.field-meta.xml
<CustomField>
    <fullName>Customer_Promised_Delivery_Date_Final__c</fullName>
    <formula>IF(Place_PO_Date__c &lt;= Booking_Date__c + 3, Expected_Delivery_Date__c , Place_PO_Date__c - Booking_Date__c + Expected_Delivery_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Promised Delivery Date(Final)</label>
    <type>Date</type>
</CustomField>