force-app/main/default/objects/Opportunity/fields/Customer_willing_to_meet_Sales_Team__c.field-meta.xml
<CustomField>
    <fullName>Customer_willing_to_meet_Sales_Team__c</fullName>
    <label>Customer willing to meet Sales Team ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>