force-app/main/default/objects/Opportunity/fields/Data_Validation_Issues__c.field-meta.xml
<CustomField>
    <fullName>Data_Validation_Issues__c</fullName>
    <label>Data Validation Issues</label>
    <type>TextArea</type>
</CustomField>