force-app/main/default/objects/Opportunity/fields/Date_Of_PCR_Approved__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_PCR_Approved__c</fullName>
    <label>Date Of PCR Approved</label>
    <type>Date</type>
</CustomField>