force-app/main/default/objects/Opportunity/fields/Date_Of_PO_Placed__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_PO_Placed__c</fullName>
    <label>Date Of PO Placed</label>
    <type>Date</type>
</CustomField>