force-app/main/default/objects/Opportunity/fields/Days_Left_to_Provide_Clearance_B2B__c.field-meta.xml
<CustomField>
    <fullName>Days_Left_to_Provide_Clearance_B2B__c</fullName>
    <formula>B2B_Required_Dispatch_Date_RDD__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Left to Provide Clearance B2B</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>