force-app/main/default/objects/Opportunity/fields/Days_Left_to_Provide_Clearance_B2C__c.field-meta.xml
<CustomField>
    <fullName>Days_Left_to_Provide_Clearance_B2C__c</fullName>
    <formula>Required_Dispatch_Date_Final__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Left to Provide Clearance B2C</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>