force-app/main/default/objects/Opportunity/fields/Days_Pending_For_SO_Creation__c.field-meta.xml
<CustomField>
    <fullName>Days_Pending_For_SO_Creation__c</fullName>
    <formula>System_SO_Release_Date__c - Today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Pending For SO Creation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>