force-app/main/default/objects/Opportunity/fields/DD_Date__c.field-meta.xml
<CustomField>
    <fullName>DD_Date__c</fullName>
    <label>DD Date</label>
    <type>Date</type>
</CustomField>