force-app/main/default/objects/Opportunity/fields/Dealer_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Contact_Number__c</fullName>
    <formula>Dealer_Name__r.Mobile_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dealer Contact Number</label>
    <type>Text</type>
</CustomField>