force-app/main/default/objects/Opportunity/fields/Dealer_Name__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer Name</label>
    <referenceTo>Dealer__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>