force-app/main/default/objects/Opportunity/fields/Defect_Category__c.field-meta.xml
<CustomField>
    <fullName>Defect_Category__c</fullName>
    <label>Defect Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Part</fullName>
            </value>
            <value>
                <fullName>Accessory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>