force-app/main/default/objects/Opportunity/fields/Delivery_Date_B2B__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date_B2B__c</fullName>
    <formula>B2B_Actual_CPDD__c - 15</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Date B2B</label>
    <type>Date</type>
</CustomField>