force-app/main/default/objects/Opportunity/fields/Delivery_Date_B2C__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date_B2C__c</fullName>
    <formula>Expected_Delivery_Date__c -15</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Date B2C</label>
    <type>Date</type>
</CustomField>